Fixes the align of user-self messages on firefox

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,9 @@
   border: 2px solid black;
   border-radius: 10px;
   padding: 10px;
+  margin-right: 4px;
+  background-color: #f1f1f160;
+  box-shadow: 3px 3px #a1a1a1;
 }
 
 .message-text {
